objects/CoverageBenefitItem.object
<CustomObject>
    <fields>
        <fullName>PC_CoinsuranceApplies__c</fullName>
        <description>Indicates if the coinsurance amount applies to the patient.  The status types are:
• Yes: If the coinsurance amount applies
•  No: If the coinsurance amount does not apply.
•  Undetermined: If the coinsurance amount  cannot be determined.
•  N/A: If the coinsurance amount is not applicable.</description>
        <label>CoinsuranceApplies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CoinsurancePercent__c</fullName>
        <description>Coinsurance Amount in percent</description>
        <inlineHelpText>Coinsurance Amount in percent</inlineHelpText>
        <label>Coinsurance Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_CopayApplies__c</fullName>
        <description>Indicates if the copay amount applies to the patient.  The status types are:
• Yes: If the copay amount applies
•  No: If the copay amount does not apply.
•  Undetermined: If the copay amount  cannot be determined.
•  N/A: If the copay amount is not applicable.</description>
        <label>Copay Applies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CoverageBenefitId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coverage Benefit Id</label>
        <referenceTo>CoverageBenefit</referenceTo>
        <relationshipLabel>Coverage Benefit Items</relationshipLabel>
        <relationshipName>PC_Coverage_Benefit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_DeductibleApplies__c</fullName>
        <description>Indicates if the deductible amount applies to the patient.  The status types are:
• Yes: If the deductible amount applies
•  No: If the deductible amount does not apply.
•  Undetermined: If the deductible amount  cannot be determined.
•  N/A: If the deductible amount is not applicable.</description>
        <label>Deductible Applies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_OOPMaxApplies__c</fullName>
        <description>Indicates if the Out-of-Pocket Maximum amount applies to the patient.  The status types are:
• Yes: If the Out-of-Pocket Maximum amount applies
•  No: If the Out-of-Pocket Maximum amount does not apply.
•  Undetermined: If the Out-of-Pocket Maximum amount  cannot be determined.
•  N/A: If the Out-of-Pocket Maximum amount is not applicable.</description>
        <label>OOP Max Applies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_PCPCopayAmount__c</fullName>
        <description>Indicates the amount (in dollars) of the cost share in the copay amount.</description>
        <label>PCP Copay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_SpecialistCopayAmount__c</fullName>
        <description>Indicates the amount (in dollars) of the cost share in the specialist copay amount.</description>
        <label>Specialist Copay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>All_CoverageBenefitItems</fullName>
        <filterScope>Everything</filterScope>
        <label>All Coverage Benefit Items</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>